--- a/coc-settings.json
+++ b/coc-settings.json
@@ -18,5 +18,6 @@
                 "racket"
             ]
         }
-    }
+    },
+    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd"
 }
